@@ -8,20 +8,15 @@ if (!$::Driver) { use FindBin; exec("$FindBin::Bin/bootstrap.pl", @ARGV, $0); di
 # Version 2.0.
 # SPDX-License-Identifier: LGPL-3.0-only OR Artistic-2.0
 
-scenarios(vlt_all => 1);
+scenarios(vlt => 1);
 
-# TODO below might no longer be requried as configure checks for -pg
-if ($ENV{VERILATOR_TEST_NO_GPROF}) {
-    skip("Skipping due to VERILATOR_TEST_NO_GPROF");
-} else {
-    dotest();
-}
+top_filename("t_prof.v");
 
 ok(1);
 
 sub dotest {
     compile(
-        verilator_flags2 => ["--stats --prof-cfuncs"],
+        verilator_flags2 => ["--stats --prof-c"],
         );
 
     unlink $_ foreach (glob "$Self->{obj_dir}/gmon.out.*");
@@ -38,13 +33,6 @@ sub dotest {
 
     run(cmd => ["cd $Self->{obj_dir} && gprof $Self->{VM_PREFIX} $gmon_base > gprof.out"],
         check_finished => 0);
-
-    run(cmd => ["cd $Self->{obj_dir} && $ENV{VERILATOR_ROOT}/bin/verilator_profcfunc gprof.out > cfuncs.out"],
-        check_finished => 0);
-
-    file_grep("$Self->{obj_dir}/cfuncs.out", qr/Overall summary by/);
-    file_grep("$Self->{obj_dir}/cfuncs.out", qr/VLib + VL_POWSS_QQQ/);
-    file_grep("$Self->{obj_dir}/cfuncs.out", qr/VBlock + t_prof:/);
 }
 
 1;
